tests/samples/negative/pointers/unsafe_bitcast_required.ax
module unsafe_bitcast_required;

fn main() -> i32 {
    let value: f32 = bitcast<f32>(((0) as u32));
    return ((value) as i32);
}
